--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(BG.png);
+    background-image: url(img/BG.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #2148C0;
